Added hyperlink to macgyver wiki page

--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
 	<div>
 		<body>
 			<h1>Really? MacGyver's First Name Is Angus?</h1>
-			<p>Yep, that's right! Angus MacGyver, born March 23, 1951, is the most awesome fictional character in the history of fictional characters. Whether it's using bubble gum, a paper clip, or even last night's left overs, he'll have that bomb defused and escape boat ready to go in a blink of an eye. </p>
+			<p>Yep, that's right! Angus MacGyver, born March 23, 1951, is the most awesome fictional character in the history of fictional characters. Whether it's using bubble gum, a paper clip, or even last night's left overs, he'll have that bomb defused and escape boat ready to go in a blink of an eye. Everyone has heard of his amazing resourcefulness and non-violent problem solving skills. Heck, he made an airplane out of just some duct tape, a tarp, and a cement mixer!</p>
 			
 			<img src="img/macgyver.jpg" alt="Macgyver">
 
-			<p>MacGyver was a TV show that aired for multiple seasons. It </p>
-			<a href="http://en.wikipedia.org/wiki/Angus_MacGyver">You can learn more about Angus here!</a>
+			<p><a href="http://en.wikipedia.org/wiki/MacGyver">MacGyver</a> is a TV show that aired for multiple seasons. It features the main character Angus MacGyver who is a secret agent for a fictional government agency. He is the God of "do it yourself" and can solve any puzzle by just using the resources around him. He never leaves his house without his Swiss Army knife, or a paperclip. I mean, how else is he supposed to stop the terrorists?.. Plain paper? Well I'm sure he has used that successfully too.</p>
+			
 		</body>
 	</div>
 </html>
