added MG intro YT video

--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
 			<img src="img/macgyver.jpg" alt="Macgyver">
 
 			<p><a href="http://en.wikipedia.org/wiki/MacGyver">MacGyver</a> is a TV show that aired for multiple seasons. It features the main character Angus MacGyver who is a secret agent for a fictional government agency. He is the God of "do it yourself" and can solve any puzzle by just using the resources around him. He never leaves his house without his Swiss Army knife, or a paperclip. I mean, how else is he supposed to stop the terrorists?.. Plain paper? Well I'm sure he has used that successfully too.</p>
+
+			<p>Check out the catchy intro that everyone remembers!</p>
+			<iframe width="420" height="315" src="http://www.youtube.com/embed/yOEe1uzurKo" frameborder="0" allowfullscreen></iframe>
 			
 		</body>
 	</div>
